added GetAuthorById func
